--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@ main:
     url: /cv/
   - title: Blog
     url: /blog/
+  - title: About
+    url: /about/
+  - title: Contact
+    url: /contact/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
