--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : At4gJ0S6DBgxAkyAbNkYtYFGlGhJwgECxa2bY68mTMQ
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
